<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_item_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/strong_blue"
    android:padding="16dp"
    tools:context=".view.AddNewItemActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Item_name"
        android:textAllCaps="true"
        android:textColor="@color/light_blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        style="edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:maxLength="20"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@color/light_blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_quantity"
        style="edit_text"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_quantity" />

    <Button
        android:id="@+id/save_button"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/archivo_black"
        android:text="@string/save"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />


</androidx.constraintlayout.widget.ConstraintLayout>